--- a/galeriatop.html
+++ b/galeriatop.html
@@ -5,35 +5,76 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Zapatillas urbanas - TOP Sneakers - </title>
 	<link rel="shortcut icon" href="img/favicon.png">
-	<link rel="stylesheet" href="css/style.css">
+	<!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- Mi CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-	<nav class="sticky__posicion botonera">
-		<a href="index.html">
-		<img src="img/logo.png" alt="Logotipo de TOP sneakers">
-		</a>
-	
-		<ul>
-			<li>
-				<a href="nosotros.html">Nosotros</a>
-			</li>
-			<li>
-				<a href="ultimoslanzamientos.html">Últimos lanzamientos</a>
-			</li>
-			<li>
-				<a href="galeriatop.html">Galería TOP</a>
-			</li>
-			<li>
-				<a href="contacto.html">Contacto</a>
-			</li>
-		</ul>	
-	
-	</nav>
-		<header>
-			<img src="img/header.png" alt="Arte visual con cajas características de zapatillas de diferentes marcas" class="encabezado__imagen">
-		</header>
+<body class="bg-black">
+<!-- navbar Bootstrap -->
+<nav class="navbar navbar-expand-md sticky__posicion botonera">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">
+    	<img src="img/logo.png" alt="Logotipo de TOP sneakers">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="nosotros.html">Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="ultimoslanzamientos.html">Últimos lanzamientos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="galeriatop.html">Galería TOP</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">Contacto</a>
+        </li>   
+      </ul>
+    </div>
+  </div>
+</nav>
 
-	<main id="galeriatop" class="bg-degrade">
+
+<!-- fin navbar bootstrap-->
+
+
+	
+<!-- header carousel bootstrap-->
+	
+	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/header/h1.png" class="d-block w-100" alt="imagen artistica de varias cajas multimarcas">
+    </div>
+    <div class="carousel-item">
+      <img src="img/header/h2.jpg" class="d-block w-100" alt="imagen air jordan 1 retro por off white">
+    </div>
+    <div class="carousel-item">
+      <img src="img/header/h3.jpg" class="d-block w-100" alt="imagen adidas forum high og">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+		<!-- fin header bootstrap-->
+
+	<main id="galeriatop" class="bg-degrade nosotros__articulo">
 		<h1>Galería TOP</h1>
 		<article class="text-center bg-cream nosotros__articulo" >
 		
@@ -111,5 +152,10 @@
     </a>
 
 </footer>
+
+<!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
